# pact-corpus

./: .gitignore  README.md  pact  pyproject.toml  requirements.txt
data/: README.md  SAMPLES_500_README.md
scripts/: extract_samples_500.py  inspect_single_39d.py  quickstart.sh  validate_return_rate.py  validate_specho.py  validate_specho_39d.py  validate_specho_full.py  visualize_39d_tui.py  visualize_matrix.py
src/corpus/: __init__.py  cli.py  formatters.py  generator.py  pipeline.py  prompts.py  registry.py  schema.py
src/corpus/collectors/: __init__.py  abstracts.py  academic.py  conversational.py  huggingface.py  legal.py  pacer.py
src/fingerprint/: __init__.py  epistemic.py  extractor.py  syntactic.py  trajectory.py  transitions.py
tests/: __init__.py  conftest.py  test_huggingface.py  test_schema.py
